# ipynbCleaner

./: CHANGELOG.md  README.md  main.py  pyproject.toml  test_nb.ipynb  test_nb_clean.ipynb
.github/workflows/: ci.yml
docs/: backlog.md  development.md  release.md
scripts/: release.ps1  release.sh
src/ipynbcleaner/: __init__.py  cleaner.py  cli.py  metrics.py
tests/: test_cleaner.py
