[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipynbcleaner"
version = "0.1.0"
description = "Clean Jupyter notebooks for LLMs and lightweight sharing."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Daniel Dias Pereira" }
]
keywords = ["jupyter", "notebook", "cleaner", "llm", "ipynb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Filters",
]

[project.urls]
Homepage = "https://github.com/DanielDPereira/ipynbCleaner"
Repository = "https://github.com/DanielDPereira/ipynbCleaner"
Issues = "https://github.com/DanielDPereira/ipynbCleaner/issues"
Changelog = "https://github.com/DanielDPereira/ipynbCleaner/blob/main/CHANGELOG.md"

[project.scripts]
ipynbcleaner = "ipynbcleaner.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]